[gd_scene load_steps=15 format=3 uid="uid://bkett2qxf0mif"]

[ext_resource type="Script" path="res://scripts/breakable_block.gd" id="1_6orpp"]
[ext_resource type="Material" uid="uid://mg1b0qfy402l" path="res://materials/outline.tres" id="2_4x4v8"]
[ext_resource type="Material" uid="uid://ca11jegrpdlqx" path="res://materials/breakable_block.tres" id="3_mtd73"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_o66f4"]
points = PackedVector3Array(0.511547, 0.511547, 0.511547, 0.511547, -0.511547, 0.511547, 0.511547, 0.511547, -0.511547, -0.511547, 0.511547, 0.511547, 0.511547, -0.511547, -0.511547, -0.511547, -0.511547, 0.511547, -0.511547, 0.511547, -0.511547, -0.511547, -0.511547, -0.511547)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lkatk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yswgu"]

[sub_resource type="ArrayMesh" id="ArrayMesh_kfx6s"]
_surfaces = [{
"aabb": AABB(-0.5, -0.5, -0.5, 1, 1, 1.00001),
"format": 4097,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0, 2, 0, 7, 0, 3, 0, 2, 0, 6, 0, 7, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 5, 0, 4, 0, 1, 0, 5, 0, 4, 0, 0, 0, 1, 0, 2, 0, 4, 0, 6, 0, 2, 0, 0, 0, 4, 0, 7, 0, 1, 0, 3, 0, 7, 0, 5, 0, 1, 0),
"primitive": 3,
"vertex_count": 8,
"vertex_data": PackedByteArray(0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191)
}, {
"aabb": AABB(-0.511547, -0.511547, -0.511547, 1.02309, 1.02309, 1.0231),
"format": 4097,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 3, 0, 2, 0, 0, 0, 1, 0, 3, 0, 2, 0, 7, 0, 6, 0, 2, 0, 3, 0, 7, 0, 6, 0, 5, 0, 4, 0, 6, 0, 7, 0, 5, 0, 4, 0, 1, 0, 0, 0, 4, 0, 5, 0, 1, 0, 2, 0, 4, 0, 0, 0, 2, 0, 6, 0, 4, 0, 7, 0, 1, 0, 5, 0, 7, 0, 3, 0, 1, 0),
"primitive": 3,
"vertex_count": 8,
"vertex_data": PackedByteArray(190, 244, 2, 191, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 191, 190, 244, 2, 191, 190, 244, 2, 191, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 191, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 191)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_jopkg"]
resource_name = "Block_Cube064"
_surfaces = [{
"aabb": AABB(-0.5, -0.5, -0.5, 1, 1, 1.00001),
"attribute_data": PackedByteArray(0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 128, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 128, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 128, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 0),
"format": 4119,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 9, 0, 3, 0, 0, 0, 6, 0, 9, 0, 8, 0, 21, 0, 10, 0, 8, 0, 19, 0, 21, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 13, 0, 4, 0, 15, 0, 13, 0, 2, 0, 4, 0, 7, 0, 12, 0, 18, 0, 7, 0, 1, 0, 12, 0, 22, 0, 5, 0, 11, 0, 22, 0, 16, 0, 5, 0),
"material": SubResource("StandardMaterial3D_lkatk"),
"primitive": 3,
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 63, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 63, 255, 127, 255, 255, 0, 0, 255, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 0, 191, 0, 0, 0, 191, 0, 0, 0, 191, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 191, 0, 0, 0, 63, 0, 0, 0, 191, 255, 127, 255, 255, 0, 0, 255, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 63, 255, 255, 255, 127, 255, 255, 255, 255, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 255, 127, 255, 127, 255, 255, 255, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 255, 127, 255, 255, 0, 0, 255, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 255, 255, 255, 127, 255, 255, 255, 255, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 255, 127, 0, 0, 255, 255, 255, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 63, 0, 0, 0, 191, 0, 0, 0, 191, 255, 255, 255, 127, 255, 255, 255, 255, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 255, 127, 255, 255, 0, 0, 255, 191, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 191, 255, 255, 255, 127, 255, 255, 255, 255)
}, {
"aabb": AABB(-0.511547, -0.511547, -0.511547, 1.02309, 1.02309, 1.0231),
"attribute_data": PackedByteArray(0, 0, 0, 128, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 128, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 128, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 0),
"format": 4119,
"index_count": 36,
"index_data": PackedByteArray(2, 0, 11, 0, 8, 0, 2, 0, 5, 0, 11, 0, 6, 0, 23, 0, 19, 0, 6, 0, 10, 0, 23, 0, 18, 0, 15, 0, 12, 0, 18, 0, 21, 0, 15, 0, 13, 0, 4, 0, 0, 0, 13, 0, 17, 0, 4, 0, 7, 0, 14, 0, 1, 0, 7, 0, 20, 0, 14, 0, 22, 0, 3, 0, 16, 0, 22, 0, 9, 0, 3, 0),
"material": SubResource("StandardMaterial3D_yswgu"),
"primitive": 3,
"vertex_count": 24,
"vertex_data": PackedByteArray(190, 244, 2, 191, 190, 244, 2, 191, 190, 244, 2, 63, 255, 255, 255, 255, 255, 255, 255, 63, 190, 244, 2, 191, 190, 244, 2, 191, 190, 244, 2, 63, 255, 127, 255, 255, 255, 255, 255, 63, 190, 244, 2, 191, 190, 244, 2, 191, 190, 244, 2, 63, 255, 255, 255, 127, 255, 127, 255, 63, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 63, 255, 127, 0, 0, 0, 0, 255, 63, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 63, 255, 255, 255, 255, 255, 255, 255, 63, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 63, 255, 255, 255, 127, 255, 127, 255, 63, 190, 244, 2, 191, 190, 244, 2, 191, 190, 244, 2, 191, 255, 127, 255, 127, 0, 0, 255, 63, 190, 244, 2, 191, 190, 244, 2, 191, 190, 244, 2, 191, 255, 127, 255, 255, 255, 255, 255, 63, 190, 244, 2, 191, 190, 244, 2, 191, 190, 244, 2, 191, 255, 255, 255, 127, 255, 127, 255, 63, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 191, 255, 127, 0, 0, 0, 0, 255, 63, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 191, 255, 127, 255, 127, 0, 0, 255, 63, 190, 244, 2, 191, 190, 244, 2, 63, 190, 244, 2, 191, 255, 255, 255, 127, 255, 127, 255, 63, 190, 244, 2, 63, 190, 244, 2, 191, 190, 244, 2, 63, 0, 0, 255, 127, 255, 255, 0, 0, 190, 244, 2, 63, 190, 244, 2, 191, 190, 244, 2, 63, 255, 255, 255, 255, 255, 255, 255, 63, 190, 244, 2, 63, 190, 244, 2, 191, 190, 244, 2, 63, 255, 127, 255, 255, 255, 255, 255, 63, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 63, 0, 0, 255, 127, 255, 255, 0, 0, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 63, 255, 127, 0, 0, 0, 0, 255, 63, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 63, 255, 255, 255, 255, 255, 255, 255, 63, 190, 244, 2, 63, 190, 244, 2, 191, 190, 244, 2, 191, 0, 0, 255, 127, 255, 255, 0, 0, 190, 244, 2, 63, 190, 244, 2, 191, 190, 244, 2, 191, 255, 127, 255, 127, 0, 0, 255, 63, 190, 244, 2, 63, 190, 244, 2, 191, 190, 244, 2, 191, 255, 127, 255, 255, 255, 255, 255, 63, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 191, 0, 0, 255, 127, 255, 255, 0, 0, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 191, 255, 127, 0, 0, 0, 0, 255, 63, 190, 244, 2, 63, 190, 244, 2, 63, 190, 244, 2, 191, 255, 127, 255, 127, 0, 0, 255, 63)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_kfx6s")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g8pjj"]
direction = Vector3(1, 1, 1)
spread = 180.0
gravity = Vector3(0, -20, 0)
initial_velocity_min = 5.0
initial_velocity_max = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fha6e"]
shading_mode = 0
albedo_color = Color(0.972549, 0.847059, 0.12549, 1)
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_x6l81"]
material = SubResource("StandardMaterial3D_fha6e")
size = Vector3(0.25, 0.25, 0.25)

[sub_resource type="Animation" id="Animation_jgety"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BreakableBlock:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles3D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jlm4i"]
resource_name = "break"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BreakableBlock:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles3D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d87mj"]
_data = {
"RESET": SubResource("Animation_jgety"),
"break": SubResource("Animation_jlm4i")
}

[node name="BreakableBlock" type="StaticBody3D"]
script = ExtResource("1_6orpp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_o66f4")

[node name="BreakableBlock" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("ArrayMesh_jopkg")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("3_mtd73")
surface_material_override/1 = ExtResource("2_4x4v8")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
amount = 4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_g8pjj")
draw_pass_1 = SubResource("BoxMesh_x6l81")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d87mj")
}

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.128935, 0)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.146394, 0)
shape = SubResource("ConvexPolygonShape3D_o66f4")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
